miglioria alla home del sito

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div id="content">
         <section id="home">
             <!-- Sezione home -->
-            <div class="container">
-                <h2>Benvenuti nella nostra ditta di piscine: Esperti nel Realizzare i Tuoi Sogni Acquatici</h2>
+            <div class="container-fluid">
+                <h2>Benvenuti!</h2>
                 <p>Se sogni di trasformare il tuo giardino in un'oasi di relax e divertimento, sei nel posto giusto. La
                     Ditta di Piscine è qui per trasformare il tuo sogno in realtà. Siamo leader nel settore delle
                     piscine e ci impegniamo a offrire servizi di installazione, manutenzione e accessori di alta qualità
@@ -101,7 +101,7 @@
 
         <section id="services">
             <!-- Sezione servizi -->
-            <div class="container">
+            <div class="container-fluid">
                 <h2>I nostri servizi</h2>
                 <div class="service">
                     <h3>Installazione Piscine Personalizzate</h3>
@@ -247,7 +247,7 @@
 
         <section id="about">
             <!-- Sezione "Chi Siamo" -->
-            <div class="container">
+            <div class="container-fluid">
                 <h2>Chi Siamo</h2>
                 <p>La nostra azienda è leader nel settore delle piscine da oltre 20 anni. Fondata nel 2000 da Giovanni
                     Rossi, un esperto del settore con una passione per il design e l'ingegneria delle piscine, ci siamo
@@ -271,7 +271,7 @@
 
         <section id="contact">
             <!-- Sezione "Contatti" -->
-            <div class="container">
+            <div class="container-fluid">
                 <h2>Contatti</h2>
                 <p>Per maggiori informazioni sui nostri servizi o per richiedere un preventivo gratuito, non esitare a
                     contattarci. Siamo qui per aiutarti a realizzare la piscina dei tuoi sogni!</p>
@@ -315,7 +315,7 @@
             max: 25,
             speed: 400,
             glare: true,
-            "max-glare": 1,
+            "glare": 1,
         });
     </script>
 
